--- a/results-summary-component-main/index.html
+++ b/results-summary-component-main/index.html
@@ -103,7 +103,8 @@
     <footer>
       <div class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-        Coded by <a href="https://github.com/GIRISHSHUKLAA">Girish</a>.
+        Coded by <a href="https://github.com/GIRISHSHUKLAA">
+kamlesh Parihar</a>.
       </div>
     </footer>
 
