--- a/product-preview-card-component-main/index.html
+++ b/product-preview-card-component-main/index.html
@@ -36,9 +36,9 @@
 
 <!-- End Challenge -->
   
-  <!-- <div class="attribution">
+   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Kamlesh Parihar</a>.
-  </div> -->
+  </div> 
 </body>
 </html>
