--- a/3-column-preview-card-component-main/3-column-preview-card-component-main/index.html
+++ b/3-column-preview-card-component-main/3-column-preview-card-component-main/index.html
@@ -57,7 +57,7 @@
  
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">kamelsh Parihar</a>.
+    Coded by <a href="https://3-column-preview-card-kamlesh.netlify.app" /></a>kamelsh Parihar</a>.
   </div>
 </body>
 </html>
