--- a/fylo-landing-page-with-two-column-layout-master/index.html
+++ b/fylo-landing-page-with-two-column-layout-master/index.html
@@ -127,11 +127,11 @@
   
   </div>
 
-  <!-- <footer2>
+   <footer2>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Kamelsh Parihar</a>.
+      Coded by <a href="https://www.frontendmentor.io/profile/pariharkamal9829">Kamelsh Parihar</a>.
     </p>
-  </footer2> -->
+  </footer2> 
 </body>
 </html>
