--- a/huddle-landing-page-with-alternating-feature-blocks-master/index.html
+++ b/huddle-landing-page-with-alternating-feature-blocks-master/index.html
@@ -107,11 +107,11 @@
 </div>
 
 
-  <!-- <footer>
+  <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Kamlesh Parihar</a>.
+      Coded by <a href="https://www.frontendmentor.io/profile/pariharkamal9829">Kamlesh Parihar</a>.
     </p>
-  </footer> -->
+  </footer> 
 </body>
 </html>
