--- a/nft-preview-card-component-main/index.html
+++ b/nft-preview-card-component-main/index.html
@@ -40,23 +40,9 @@
 </div>
 </div>
 
-
-
-
-
-
-  <!-- Equilibrium #3429
-
-  Our Equilibrium collection promotes balance and calm.
-
-  0.041 ETH
-  3 days left
-  
-  Creation of Jules Wyvern -->
-
-  <!-- <div class="attribution">
+   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">kamlesh Parihar</a>.
-  </div> -->
+    Coded by <a href="https://www.frontendmentor.io/profile/pariharkamal9829">kamlesh Parihar</a>.
+  </div> 
 </body>
 </html>
