--- a/order-summary-component-main/index.html
+++ b/order-summary-component-main/index.html
@@ -40,29 +40,9 @@
 </div>
 
 
-
-
-
-
-
-
-
-  <!-- Order Summary
-
-  You can now listen to millions of songs, audiobooks, and podcasts on any 
-  device anywhere you like!
-
-  Annual Plan
-  $59.99/year
-
-  Change
-
-  Proceed to Payment
-  Cancel Order
-  
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Kamlesh parihar</a>.
-  </div> -->
+    Coded by <a href="https://www.frontendmentor.io/profile/pariharkamal9829">Kamlesh parihar</a>.
+  </div> 
 </body>
 </html>
