--- a/product-preview-card-component-main/index.html
+++ b/product-preview-card-component-main/index.html
@@ -38,7 +38,7 @@
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Kamlesh Parihar</a>.
+    Coded by <a href="https://www.frontendmentor.io/profile/pariharkamal9829">Kamlesh Parihar</a>.
   </div>
 </body>
 </html>
