--- a/fylo-dark-theme-landing-page-master/index.html
+++ b/fylo-dark-theme-landing-page-master/index.html
@@ -24,14 +24,39 @@
 </head>
 <body>
 
-  <nav>
-     <img src="images/logo.svg" alt="">
 
-    <ul>Team</ul>
-    <ul>Features</ul>
-    <ul>Sign In</ul>
+<header>
+  <nav class="navbar">
+      <a href="#" class="nav-logo"><i><img src="images/logo.svg" alt=""></i></a>
+      <ul class="nav-menu">
+          <li class="nav-item">
+              <a href="#" class="nav-link">Team</a>
+          </li>
+          <li class="nav-item">
+              <a href="#" class="nav-link">Product</a>
+          </li>
+          <li class="nav-item">
+              <a href="#" class="nav-link">Sign In</a>
+          </li>
+          <li class="nav-item">
+              <a href="#" class="nav-link">Contact</a>
+          </li>
+      </ul>
+      <div class="hamburger">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+      </div>
+  </nav>
+</header>
 
-</nav>
+
+
+
+
+
+
+
 <button class="dark" onclick="myFunction()"> <i class="fa-solid fa-circle-half-stroke"></i> </button>
 <script>
   function myFunction() {
@@ -197,13 +222,14 @@
 
 
 
-  <!-- <footer2>
+  <footer2>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="#">kamlesh Parihar</a>.
     </p>
-  </footer2> -->
+  </footer2>
 
   <script src="https://kit.fontawesome.com/9a99e4ad70.js" crossorigin="anonymous"></script>
+  <script src="index.js"></script>
 </body>
 </html>
