footer left to upadate

--- a/fylo-dark-theme-landing-page-master/index.html
+++ b/fylo-dark-theme-landing-page-master/index.html
@@ -51,12 +51,6 @@
 </header>
 
 
-
-
-
-
-
-
 <button class="dark" onclick="myFunction()"> <i class="fa-solid fa-circle-half-stroke"></i> </button>
 <script>
   function myFunction() {
@@ -131,17 +125,22 @@
 
 <div class="test">
   <img src="images/bg-quotes.png" style="margin-bottom: -20px;margin-left:20px; max-height: 30px;" alt="">
+
+  
   <div class="test1">
   <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
     become a well-oiled collaboration machine.</p>
+
   <div class="avatar">
+    <div>
   <img class="hero" src="images/profile-1.jpg" alt="">
 </div>
-    <div id="text">
+    <div class="text">
     <p class="t1">Satish Patel</p>
   <p class="t2">Founder & CEO, Huddle</p>
 </div>
-  </div>
+</div>
+</div>
   
   
   <div class="test2">
@@ -149,85 +148,90 @@
   <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
   become a well-oiled collaboration machine.</p>
   <div class="avatar">
+    <div>
     <img class="hero" src="images/profile-2.jpg" alt="">
 </div>
 
-    <div id="text">
+    <div class="text">
   <p class="t1">Bruce McKenzie</p>
   <p class="t2">Founder & CEO, Huddle</p>
 </div>
 </div>
+</div>
+
   <div class="test3">
 
   <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
   become a well-oiled collaboration machine.</p>
 <div class="avatar">
+  <div>
   <img class="hero" src="images/profile-3.jpg" alt="">
 </div>
-  <div id="text">
+  <div class="text">
   <p class="t1">Iva Boyd</p>
   <p class="t2">Founder & CEO, Huddle</p>
-
+</div>
 </div>
 </div>
 </div>
 
 <div class="sec4">
-  <h1>Get early access today</h1>
+  <h1 id="head1">Get early access today</h1>
 
-  <p>It only takes a minute to sign up and our free starter tier is extremely generous. If you have any 
+  <p id="head2">It only takes a minute to sign up and our free starter tier is extremely generous. If you have any 
   questions, our support team would be happy to help you.</p>
-
+    <input type="email" name="" id="email">
   <button class="btn">Get Started For Free</button>
 
 </div>
 
 
 
-  <div class="conatiner">
-    <div class="cl-1">
+  <footer>
+    
+    
   <a href="#"><img src="images/logo.svg" alt="" ></a>
-  <p id="p"><img src="images/icon-location.svg" alt=""> ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
+
+
+
+  <img src="images/icon-location.svg" alt="">
+  <p> ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
   dolore magna aliqua </p>
-</div>
 
-<div class="cl-2">
+
+
   
-<ul><img src="images/icon-phone.svg" alt=""> <span>+1-543-123-4567</span></ul>
-<ul><img src="images/icon-email.svg" alt=""> <span>example@fylo.com</span></ul>
-</div>
-<div class="cl-3">
+<img src="images/icon-phone.svg" alt=""> <p>+1-543-123-4567</p>
+<img src="images/icon-email.svg" alt=""> <p>example@fylo.com</p>
 
-<ul>About Us</ul>
-<ul>Jobs</ul>
-<ul>Press</ul>
-<ul>Blog</ul>
-</div>
-<div class="cl-4">
-<ul>Contact Us</ul>
-<ul>Terms</ul>
-<ul>Privacy</ul>
-</div>
 
-<div class="cl-5">
-  <ul><i class="fa-brands fa-facebook"></i>
-  </ul>
-  <ul><i class="fa-brands fa-square-twitter"></i></ul>
-  <ul><i class="fa-brands fa-instagram"></i></ul>
-</div>
+<ul>
+<li>About Us</li>
+<li>Jobs</li>
+<li>Press</li>
+<li>Blog</li>
+</ul>
+
+<ul>
+<li>Contact Us</li>
+<li>Terms</li>
+<li>Privacy</li>
+</ul>
+
+<ul>
+  <i class="fa-brands fa-facebook"></i>
+  <i class="fa-brands fa-square-twitter"></i>
+  <i class="fa-brands fa-instagram"></i>
+</ul>
   
-</div>
 
 
-
-
-
-  <footer2>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="#">kamlesh Parihar</a>.
     </p>
-  </footer2>
+  </footer>
+
 
   <script src="https://kit.fontawesome.com/9a99e4ad70.js" crossorigin="anonymous"></script>
   <script src="index.js"></script>
