--- a/fylo-dark-theme-landing-page-master/index.html
+++ b/fylo-dark-theme-landing-page-master/index.html
@@ -188,44 +188,53 @@
 
 
   <footer>
+    <div class="footer">
     
-    
-  <a href="#"><img src="images/logo.svg" alt="" ></a>
+  <div class="div1">
+  <a  href="#"><img class="logo2" src="images/logo.svg" alt="" ></a>
 
 
-
-  <img src="images/icon-location.svg" alt="">
+<div class="col1">
+  <div>
+  <img src="images/icon-location.svg" alt=""></div>
   <p> ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
   dolore magna aliqua </p>
+</div>
+</div>
+<div class="div2">
+<div class="col2">
+<div><img src="images/icon-phone.svg" alt=""></div>
+ <p>+91-543-123-4567</p>
+</div>
+
+<div class="col3">
+<div><img src="images/icon-email.svg" alt=""> </div>
+<p>example@fylo.com</p>
+</div>
+</div>
 
 
-
-  
-<img src="images/icon-phone.svg" alt=""> <p>+1-543-123-4567</p>
-<img src="images/icon-email.svg" alt=""> <p>example@fylo.com</p>
-
-
-<ul>
-<li>About Us</li>
-<li>Jobs</li>
-<li>Press</li>
-<li>Blog</li>
+<ul class="footer-link">
+  <a href="#"><li>About Us</li></a>
+  <a href="#"><li>Jobs</li></a>
+  <a href="#"><li>Press</li></a>
+  <a href="#"><li>Blog</li></a>
 </ul>
 
-<ul>
-<li>Contact Us</li>
-<li>Terms</li>
-<li>Privacy</li>
+<ul class="footer-link">
+  <a href="#"><li>Contact Us</li></a>
+  <a href="#"><li>Terms</li></a>
+  <a href="#"><li>Privacy</li></a>
 </ul>
 
-<ul>
+<ul class="icon">
   <i class="fa-brands fa-facebook"></i>
   <i class="fa-brands fa-square-twitter"></i>
   <i class="fa-brands fa-instagram"></i>
 </ul>
   
 
-
+</div>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="#">kamlesh Parihar</a>.
